# adacc

./: .gitmodules  CMakeLists.txt  build_llvm.sh  build_symcc.sh
commit_history/: symcc_to_aflpp_fuzzbench  symcc_to_fuzzbench
compiler/: Main.cpp  Pass.cpp  Pass.h  Runtime.cpp  Runtime.h  Symbolizer.cpp  Symbolizer.h  sym++.in  symcc.in
examples/: .gitignore  README.md  afl-sample.c  build_fuzzer.sh  build_re_fuzz.sh  build_simple_samples.sh  clean_setup.sh  extract_cov.sh  fuzz_re.c  hello-world.cpp  libfuzz-harness-proxy.c  memcmp-example.c  qc.sh  run_proxy.sh  simple-example.c  simple-statemachine.c  simple-statemachine2.c  simple-statemachine3.c  simple-statemachine4.c  simple-switch  simple-switch.c  strcmp-example.c  symcc-issue-23.c
examples/afl-test/: afl-test.c  launch_all.py  rerun.sh
models/klee-libc/: build.sh
runtime/: CMakeLists.txt  Config.cpp  Config.h  LibcWrappers.cpp  RuntimeCommon.cpp  RuntimeCommon.h  Shadow.h
runtime/qsym_backend/: CMakeLists.txt  Runtime.cpp
runtime/simple_backend/: Runtime.cpp
util/: min-concolic-exec.sh  pure_concolic_execution.sh
util/symcc_fuzzing_helper/src/: main.rs  symcc.rs
